; ModuleID = '/home/carl/AnghaBench/linux/drivers/crypto/extr_s5p-sss.c_s5p_hash_copy_result.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/crypto/extr_s5p-sss.c_s5p_hash_copy_result.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ahash_request = type { i32 }
%struct.s5p_hash_reqctx = type { i32, i32 }

@HASH_REG_SIZEOF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ahash_request*)* @s5p_hash_copy_result to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @s5p_hash_copy_result(%struct.ahash_request* %0) #0 {
  %2 = alloca %struct.ahash_request*, align 8
  %3 = alloca %struct.s5p_hash_reqctx*, align 8
  store %struct.ahash_request* %0, %struct.ahash_request** %2, align 8
  %4 = load %struct.ahash_request*, %struct.ahash_request** %2, align 8
  %5 = call %struct.s5p_hash_reqctx* @ahash_request_ctx(%struct.ahash_request* %4)
  store %struct.s5p_hash_reqctx* %5, %struct.s5p_hash_reqctx** %3, align 8
  %6 = load %struct.ahash_request*, %struct.ahash_request** %2, align 8
  %7 = getelementptr inbounds %struct.ahash_request, %struct.ahash_request* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %11, label %10

10:                                               ; preds = %1
  br label %24

11:                                               ; preds = %1
  %12 = load %struct.ahash_request*, %struct.ahash_request** %2, align 8
  %13 = getelementptr inbounds %struct.ahash_request, %struct.ahash_request* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.s5p_hash_reqctx*, %struct.s5p_hash_reqctx** %3, align 8
  %16 = getelementptr inbounds %struct.s5p_hash_reqctx, %struct.s5p_hash_reqctx* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = load %struct.s5p_hash_reqctx*, %struct.s5p_hash_reqctx** %3, align 8
  %19 = getelementptr inbounds %struct.s5p_hash_reqctx, %struct.s5p_hash_reqctx* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = load i32, i32* @HASH_REG_SIZEOF, align 4
  %22 = mul nsw i32 %20, %21
  %23 = call i32 @memcpy(i32 %14, i32 %17, i32 %22)
  br label %24

24:                                               ; preds = %11, %10
  ret void
}

declare dso_local %struct.s5p_hash_reqctx* @ahash_request_ctx(%struct.ahash_request*) #1

declare dso_local i32 @memcpy(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
